--- a/anshika.html
+++ b/anshika.html
@@ -20,8 +20,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet" />
-      <link rel = "icon" href = 
-"assests/ANSHIKA.png"/> 
+      <link rel = "icon" href ="ANSHIKA 1.jpeg"/> 
               type = "image/x-icon">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css" />
       <title>Anshika Singh</title>
@@ -33,7 +32,7 @@
         <div class="main-header__logo-container">
           <div class="main-header__logo-img-cont">
             <img
-              src="./assests/ANSHIKA.png"
+              src ="ANSHIKA 1.jpeg"
               alt="logo Image" class="main-header__logo-img" />
           </div>
           <h4 class="main-header__logo-text">Anshika Singh</h4>
@@ -89,7 +88,7 @@
             <button class="btn btn-inv home-hero__btn-theme">Contact</button>
           </div>
           <div>
-            <img src="assests/ANSHIKA 1.jpeg" style="height: 400px;width: 300px;"/>
+            <img src ="ANSHIKA 1.jpeg"style="height: 400px;width: 300px;"/>
           </div>
         </div>
       </section>
