--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="main-header__logo-container">
           <div class="main-header__logo-img-cont">
             <img
-              src="./assests/ANSHIKA.png"
+              src="ANSHIKA 1.jpeg"
               alt="logo Image" class="main-header__logo-img" />
           </div>
           <h4 class="main-header__logo-text">Anshika Singh</h4>
@@ -89,7 +89,7 @@
             <button class="btn btn-inv home-hero__btn-theme">Contact</button>
           </div>
           <div>
-            <img src="assests/ANSHIKA 1.jpeg" style="height: 400px;width: 300px;"/>
+            <img src="ANSHIKA 1.jpeg" style="height: 400px;width: 300px;"/>
           </div>
         </div>
       </section>
