--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci quaerat archi
                 </div>
                 <div class="projects__list-item-details">
                   <div class="projects__list-item-img-cont">
-                    <img src="./assests/mock.png" alt="Project Image" class="projects__list-item-img" />
+                    <img src="project.jpg" alt="Project Image" class="projects__list-item-img" />
                   </div>
                   <h3 class="heading-tertiary projects__list-item-heading-tertiary">
                     Project Name
@@ -217,7 +217,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci quaerat archi
                 </div>
                 <div class="projects__list-item-details">
                   <div class="projects__list-item-img-cont">
-                    <img src="./assets/mock.png" alt="Project Image" class="projects__list-item-img" />
+                    <img src="project.jpg" alt="Project Image" class="projects__list-item-img" />
                   </div>
                   <h3 class="heading-tertiary projects__list-item-heading-tertiary">
                     Project Name
@@ -244,7 +244,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci quaerat archi
               <div class="projects__list-item">
                 <div class="projects__list-item-details">
                   <div class="projects__list-item-img-cont">
-                    <img src="./assests/mock.png" alt="Project Image" class="projects__list-item-img" />
+                    <img src="project.jpg" alt="Project Image" class="projects__list-item-img" />
                   </div>
                   <h3 class="heading-tertiary projects__list-item-heading-tertiary">
                     Project Name
